  modules (it was no ore used after the switch to Git).
  Of course the package level constant (:data:`tables.__version__`) still
  remains.  Closes :issue:`112`.

- The :meth:`File.createExternalLink` method no more has a keyword parameter
  named *warn16incompat*.  It was deprecated since PyTables 2.4.

- The deprecated :exc:`exceptions.Incompat16Warning` exception has been
  removed


Other backward incompatible changes
-----------------------------------

- Unicode attributes are no more stored in the HDF5 file as pickled string.
  They are now saved on the HDF5 file as UTF-8 encoded strings.

  Although this do not introduces no API breakage, files produced are different
  (for what concerns unicode attributes) from the ones produced by earlier
  versions of PyTables.


Bugs fixed
----------

- Better check access on closed files (closes: :issue:`62`)


.. _PyInstaller: http://www.pyinstaller.org
.. _`download area`: http://sourceforge.net/projects/pytables/files/pytables


Changes from 2.3.1 to 2.4
=========================

New features
------------

- Improved HDF5 error logging management:

  * added a new function, :func:`silenceHDF5Messages`, for suppressing
    (and re-enabling) HDF5 messages.  By default HDF5 error logging is now
    suppressed. Closes :issue:`87`.
  * now all HDF5 error messages and trace-backs are trapped and attached to
    the :exc:`exceptions.HDF5ExtError` exception instances.
    Closes :issue:`120`.

- Added support for the float16 data type.  It is only available if numpy_
  provides it as well (i.e. numpy_ >= 1.6).  See :issue:`51`.

- Leaf nodes now have attributes for retrieving the size of data in memory
  and on disk.  Data on disk can be compressed, so the new attributes make it
  easy to compute the data compression ration.
  Thanks to Josh Ayers (close :issue:`141`).

- The maximum number of threads for Blosc_ and Numexpr_ is now handled using
  the :data:`parameters.MAX_BLOSC_THREADS` and